# edgedetection

./: README.md  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
android/app/cpp/: CMakeLists.txt  native_opencv.cpp  opencv_processor.cpp  opencv_processor.h  opengl_renderer.cpp  opengl_renderer.h
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/edgedetection/: MainActivity.kt  NativeBridge.kt
android/opencv/: CMakeLists.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  native_bridge.dart
lib/screens/: camera_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  main.ts  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
